--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <!-- <script src="./js/lesson_1.js" defer></script>-->
+    <!-- <script type="module" src="./js/lesson_2.js" defer></script> -->
+    <script type="module" src="./js/lesson_3.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <!-- <script src="./js/lesson_1.js" defer></script>-->
-  <script type="module" src="./js/lesson_2.js" defer></script>
-</head>
-
-<body></body>
-
+  <body></body>
 </html>
