--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <!-- <script src="./js/lesson_1.js" defer></script>-->
     <!-- <script type="module" src="./js/lesson_2.js" defer></script> -->
-    <script type="module" src="./js/lesson_3.js"></script>
+    <!-- <script type="module" src="./js/lesson_3.js"></script> -->
+    <script type="module" src="./js/lesson_4.js"></script>
   </head>
 
   <body></body>
