--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <script type="module" src="./js/lesson_4.js"></script>
   </head>
 
-  <body></body>
+  <body>
+    <ul class="stats">
+      
+    </ul>
+  </body>
 </html>
