--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
     <!-- <script src="./js/lesson_1.js" defer></script>-->
     <!-- <script type="module" src="./js/lesson_2.js" defer></script> -->
     <!-- <script type="module" src="./js/lesson_3.js"></script> -->
@@ -11,8 +12,29 @@
   </head>
 
   <body>
-    <ul class="stats">
-      
-    </ul>
+    <ul class="stats"></ul>
+    <table id="productTable">
+      <thead>
+        <tr>
+          <th>Назва</th>
+          <th>Ціна</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Яблука</td>
+          <td>20 грн</td>
+        </tr>
+        <tr>
+          <td>Банани</td>
+          <td>30 грн</td>
+        </tr>
+        <tr>
+          <td>Апельсини</td>
+          <td>25 грн</td>
+        </tr>
+      </tbody>
+    </table>
+    <div id="productDetails"></div>
   </body>
 </html>
