--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 
   <body>
     <ul class="stats"></ul>
-    <table id="productTable">
+    <div id="controls">
+      <input type="number" min="1" max="100" step="1" />
+      <button type="button" data-create>Create</button>
+      <button type="button" data-destroy>Destroy</button>
+    </div>
+
+    <div id="boxes"></div>
+
+    <!-- <table id="productTable">
       <thead>
         <tr>
           <th>Назва</th>
@@ -34,7 +42,7 @@
           <td>25 грн</td>
         </tr>
       </tbody>
-    </table>
+    </table> -->
     <div id="productDetails"></div>
   </body>
 </html>
